--- a/cart.html
+++ b/cart.html
@@ -131,13 +131,13 @@
                   <div class="row">
                     <div class="col-md-6 mb-3">
                       <label for="numeroTarjeta">Número de tarjeta</label>
-                      <input type="number" class="form-control" min="12" id="numeroTarjeta" name="numeroTarjeta"
+                      <input type="number" class="form-control" min="999999999999" id="numeroTarjeta" name="numeroTarjeta"
                         required>
                       <div class="invalid-feedback">Es necesario poner un numero de tarjeta valido</div>
                     </div>
                     <div class="col-md-4 mb-3">
                       <label for="numeroSeg">Codigo de seg.</label>
-                      <input type="number" class="form-control" id="numeroSeg" name="numeroSeg" required>
+                      <input type="number" class="form-control" id="numeroSeg" name="numeroSeg" min="99" required>
                       <div class="invalid-feedback">Es necesario poner un codigo de seguridad</div>
                     </div>
                     <div class="col-md-6 mb-3">
