--- a/cart.html
+++ b/cart.html
@@ -112,7 +112,7 @@
           <h4>Forma de pago</h4>
           <!-- Boton Activador modal -->
           <div>
-            <div class="d-inline" id="metodoDePago">No has seleccionado</div>
+            <div class="d-inline form-control" id="metodoDePago">No has seleccionado</div>
             <a type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
               style="color: blue; text-decoration: underline; color: #0d6efd;" value="Seleccionar">Seleccionar
             </a>
