--- a/login.html
+++ b/login.html
@@ -16,12 +16,26 @@
     <div class="jumbotron1"></div>
     <!-- formulario de ingreso a la pagina -->
     <div class="form-login">
-        <h2>Inicio de sesion</h2>
-        <label for="nombre-usuario">Email</label><br>
-        <input type="text" id="nombre-usuario" name="nombre-usuario"><br><br>
-        <label for="password">Contraseña</label><br>
-        <input type="password" id="password"><br><br>
-        <button class="form-login-submit" type="button" id="button" onclick="login()">Registrarme</button><br>
+        <form class="row g-3 needs-validation" novalidate>
+            <h2>Inicio de sesion</h2>
+            <div class="col-8 mx-auto">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" required>
+                <div class="invalid-feedback">
+                    Debes ingresar un e-mail valido
+                </div>
+            </div>
+            <div class="col-8 mx-auto">
+                <label for="password" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="password" minlength="6" required>
+                <div class="invalid-feedback">
+                    Debes ingresar una Contraseña de al menos 6 caracteres
+                </div>
+            </div>
+            <div class="col-12">
+                <button class="btn btn-primary" type="submit" id="login">Ingresar</button>
+            </div>
+        </form>
     </div>
     <!-- footer generico ya existente -->
     <footer class="text-muted">
@@ -35,11 +49,11 @@
     </footer>
     <!-- div de alerta de error -->
     <div class="alert alert-danger alert-dismissible fade" role="alert" id="alert-danger">
-        <p>Debe colocar al menos un caracter en nombre de usuario y password</p>
+        <p>Debe colocar usuario y password correctamente</p>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"
             onclick="cerrarDiv()"></button>
     </div>
-    <script src="js/login.js"></script>  
+    <script src="js/login.js"></script>
 </body>
 
 </html>
