--- a/my-profile.html
+++ b/my-profile.html
@@ -31,10 +31,51 @@
   <!-- Navegador -->
   <div id="navegador"></div>
   <main>
+    <!-- Form main -->
     <div class="container">
-      <!-- <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div> -->
+      <form class="row mx-auto needs-validation" id="formPerfil" novalidate>
+        <div class="my-5 col-12">
+          <h2 class="d-inline">Perfil</h2>
+          <div class="w-50 float-end">
+          <img src="img/img_perfil.png" class="img-thumbnail" alt="img_perfil">
+          </div>
+        </div>
+        <hr>
+        <div class="col-sm-12 col-md-6 col-lg-6 mb-4">
+          <label for="pNombre" class="form-label">Primer nombre*</label>
+          <input type="text" class="form-control" id="pNombre" required>
+          <div class="invalid-feedback">Debes ingresar tu nombre</div>
+          <div class="valid-feedback">Dato ingresado correctamente</div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6 mb-4">
+          <label for="sNombre" class="form-label">Segundo Nombre</label>
+          <input type="text" class="form-control" id="sNombre">
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6 mb-4">
+          <label for="pApellido" class="form-label">Primer apellido*</label>
+          <input type="text" class="form-control" id="pApellido" required>
+          <div class="invalid-feedback">Debes ingresar tu apellido</div>
+          <div class="valid-feedback">Dato ingresado correctamente</div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6 mb-4">
+          <label for="sApellido" class="form-label">Segundo apellido</label>
+          <input type="text" class="form-control" id="sApellido">
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6 mb-4">
+          <label for="email" class="form-label">E-mail*</label>
+          <input type="email" class="form-control" id="email" required>
+          <div class="invalid-feedback">Debes ingresar tu E-mail</div>
+          <div class="valid-feedback">Dato ingresado correctamente</div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6 mb-4">
+          <label for="telefono" class="form-label">Telefono de contacto</label>
+          <input type="number" class="form-control" id="telefono">
+        </div>
+        <hr class="mt-4">
+        <div class="col-12">
+          <button class="btn btn-primary" type="submit" id="btnGuardar">Guardar cambios</button>
+        </div>
+      </form>
     </div>
   </main>
   <!-- Footer -->
