Entrega 7 (c/desafiate) completa

--- a/cart.html
+++ b/cart.html
@@ -14,8 +14,7 @@
 
 <body>
   <!-- Navegador -->
-  <div id="navegador">
-  </div>
+  <div id="navegador"></div>
   <!-- Main div -->
   <main>
     <div id="alertaEnvio"></div>
@@ -232,11 +231,8 @@
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
   </footer>
-  
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/cart.js"></script>
-
 </body>
-
 </html>
