--- a/my-profile.html
+++ b/my-profile.html
@@ -58,7 +58,7 @@
         </div>
         <div class="col-sm-12 col-md-6 col-lg-6 mb-4">
           <label for="telefono" class="form-label">Telefono de contacto</label>
-          <input type="number" class="form-control" id="telefono">
+          <input type="tel" class="form-control" id="telefono">
         </div>
         <hr class="mt-4">
         <div class="col-12">
